--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 body{
     height: 100%;
     margin: 0;
-    background: #192A56;
+    background: #111c38;
 }
 .main-container{
     display: flex;
@@ -27,7 +27,49 @@ body{
     border-width: 1px;
     border-color : rgb(46, 46, 46);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    height: 550px;
+    height: 600px;
     width: 75%;
     margin: 20px; 
-}   
+}  
+
+.cell{
+    background-color: #0A3D62;
+    border: 0.1px solid rgb(0, 0, 0);
+}
+
+@keyframes obstacle-select{
+    0%{background-color: yellow; transform: scale(0.3,0.2);}
+    
+    50% {background-color: orange; transform: scale(1.3,1.2);}
+    100%{background-color: red}
+}
+.obstacle{
+    background: black;
+    animation-name: obstacle-select;
+    animation-duration: 0.2s;
+}
+
+@keyframes visited-animate
+{
+    25%{background-color: red;}
+    50%{background-color: orangered;}
+    75%{background-color: orange;}
+    100%{background-color: yellow;}
+}
+.visited{
+    background-color: orange;
+    border-color: black;
+    animation-name: visited-animate;
+    animation-duration: 0.15s;
+}
+@keyframes final-animate{
+    0%{background-color: #095e17; transform: scale(1.1,1.1)}
+    50%{background-color: #43ef60; transform: scale(1.2,1.2)}
+    
+}
+.final{
+    background-color: #8DE969;
+    border-color:#87df65 ;
+    animation-name: final-animate;
+    animation-duration: 0.5s;
+}
